--- a/prepros.config
+++ b/prepros.config
@@ -878,6 +878,13 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "scss/mixins.scss",
+        "config": {
+          "customOutput": "css/mizins.css"
+        }
+      }
+    ]
   }
 }
